--- a/notebooks/XGB.ipynb
+++ b/notebooks/XGB.ipynb
@@ -612,12 +612,12 @@
     "#XGBoost hyper-parameter tuning\n",
     "def hyperParameterTuning(X_train, y_train):\n",
     "    param_tuning = {\n",
-    "        'learning_rate': [0.01, 0.1],\n",
-    "        'max_depth': [3, 5, 7, 10],\n",
-    "        'min_child_weight': [1, 3, 5],\n",
-    "        'subsample': [0.5, 0.7],\n",
-    "        'colsample_bytree': [0.5, 0.7],\n",
-    "        'n_estimators' : [100, 200, 500],\n",
+    "        'learning_rate': [0.001, 0.005, 0.01, 0.05, 0.1],\n",
+    "        'max_depth': [3, 5, 7, 10, 15, 20],\n",
+    "        'min_child_weight': [1, 3, 5, 7],\n",
+    "        'subsample': [0.3, 0.5, 0.7],\n",
+    "        'colsample_bytree': [0.3, 0.5, 0.7],\n",
+    "        'n_estimators' : [100, 200, 500, 1000],\n",
     "        'objective': ['multi:softmax'],\n",
     "        'tree_method': ['gpu_hist']\n",
     "    }\n",
@@ -648,10 +648,79 @@
      "text": [
       "Fitting 5 folds for each of 288 candidates, totalling 1440 fits\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\envs\\IPAnalysis-39\\lib\\site-packages\\xgboost\\sklearn.py:1224: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\envs\\IPAnalysis-39\\lib\\site-packages\\sklearn\\preprocessing\\_label.py:98: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "C:\\ProgramData\\Anaconda3\\envs\\IPAnalysis-39\\lib\\site-packages\\sklearn\\preprocessing\\_label.py:133: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[17:05:04] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.5.1/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'colsample_bytree': 0.7,\n",
+       " 'learning_rate': 0.01,\n",
+       " 'max_depth': 3,\n",
+       " 'min_child_weight': 1,\n",
+       " 'n_estimators': 500,\n",
+       " 'objective': 'multi:softmax',\n",
+       " 'subsample': 0.5,\n",
+       " 'tree_method': 'gpu_hist'}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "hyperParameterTuning(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21:13:10] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.5.1/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softmax' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "0.7203333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "params = {'colsample_bytree': 0.7,\n",
+    "        'learning_rate': 0.01,\n",
+    "        'max_depth': 3,\n",
+    "        'min_child_weight': 1,\n",
+    "        'n_estimators': 500,\n",
+    "        'objective': 'multi:softmax',\n",
+    "        'subsample': 0.5,\n",
+    "        'tree_method': 'gpu_hist'}\n",
+    "\n",
+    "# read in data\n",
+    "dmatrix = xgb.DMatrix(x, label=y)\n",
+    "num_round = 100\n",
+    "bst = xgb.train(param, dmatrix)\n",
+    "# make prediction\n",
+    "preds = bst.predict(dmatrix)\n",
+    "print(accuracy_score(y, preds))"
    ]
   },
   {
