Update BORUTA implementation

--- a/notebooks/Feature Selection.ipynb
+++ b/notebooks/Feature Selection.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "[3000 rows x 9 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
        "[3000 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "         0.30543027,  0.18808943]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,94 +542,6 @@
     "scaler = StandardScaler()\n",
     "X_data_minmax = scaler.fit_transform(X_numeric_class)\n",
     "X_data_minmax"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Baseline Random Forest"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration: \t1 / 100\n",
-      "Confirmed: \t0\n",
-      "Tentative: \t9\n",
-      "Rejected: \t0\n",
-      "Iteration: \t2 / 100\n",
-      "Confirmed: \t0\n",
-      "Tentative: \t9\n",
-      "Rejected: \t0\n",
-      "Iteration: \t3 / 100\n",
-      "Confirmed: \t0\n",
-      "Tentative: \t9\n",
-      "Rejected: \t0\n",
-      "Iteration: \t4 / 100\n",
-      "Confirmed: \t0\n",
-      "Tentative: \t9\n",
-      "Rejected: \t0\n",
-      "Iteration: \t5 / 100\n",
-      "Confirmed: \t0\n",
-      "Tentative: \t9\n",
-      "Rejected: \t0\n",
-      "Iteration: \t6 / 100\n",
-      "Confirmed: \t0\n",
-      "Tentative: \t9\n",
-      "Rejected: \t0\n",
-      "Iteration: \t7 / 100\n",
-      "Confirmed: \t0\n",
-      "Tentative: \t9\n",
-      "Rejected: \t0\n",
-      "Iteration: \t8 / 100\n",
-      "Confirmed: \t2\n",
-      "Tentative: \t0\n",
-      "Rejected: \t7\n",
-      "\n",
-      "\n",
-      "BorutaPy finished running.\n",
-      "\n",
-      "Iteration: \t9 / 100\n",
-      "Confirmed: \t2\n",
-      "Tentative: \t0\n",
-      "Rejected: \t7\n"
-     ]
-    }
-   ],
-   "source": [
-    "clf = RandomForestClassifier(n_estimators=200, n_jobs=-1, max_depth=5)\n",
-    "\n",
-    "trans = BorutaPy(clf, random_state=42, verbose=2)\n",
-    "trans.fit(X_train, y_train)\n",
-    "X_train_fs = trans.transform(X_train)\n",
-    "X_test_fs = trans.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([False, False, False, False, False, False, False,  True,  True])"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trans.support_"
    ]
   },
   {
@@ -906,6 +818,203 @@
     "          fontsize=30, fontweight='bold')\n",
     "plt.savefig(\"../plots/MINFO_5G.png\", dpi=300, bbox_inches='tight')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BORUTA using Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration: \t1 / 100\n",
+      "Confirmed: \t0\n",
+      "Tentative: \t7\n",
+      "Rejected: \t0\n",
+      "Iteration: \t2 / 100\n",
+      "Confirmed: \t0\n",
+      "Tentative: \t7\n",
+      "Rejected: \t0\n",
+      "Iteration: \t3 / 100\n",
+      "Confirmed: \t0\n",
+      "Tentative: \t7\n",
+      "Rejected: \t0\n",
+      "Iteration: \t4 / 100\n",
+      "Confirmed: \t0\n",
+      "Tentative: \t7\n",
+      "Rejected: \t0\n",
+      "Iteration: \t5 / 100\n",
+      "Confirmed: \t0\n",
+      "Tentative: \t7\n",
+      "Rejected: \t0\n",
+      "Iteration: \t6 / 100\n",
+      "Confirmed: \t0\n",
+      "Tentative: \t7\n",
+      "Rejected: \t0\n",
+      "Iteration: \t7 / 100\n",
+      "Confirmed: \t0\n",
+      "Tentative: \t7\n",
+      "Rejected: \t0\n",
+      "Iteration: \t8 / 100\n",
+      "Confirmed: \t0\n",
+      "Tentative: \t7\n",
+      "Rejected: \t0\n",
+      "Iteration: \t9 / 100\n",
+      "Confirmed: \t0\n",
+      "Tentative: \t7\n",
+      "Rejected: \t0\n",
+      "Iteration: \t10 / 100\n",
+      "Confirmed: \t0\n",
+      "Tentative: \t7\n",
+      "Rejected: \t0\n",
+      "Iteration: \t11 / 100\n",
+      "Confirmed: \t0\n",
+      "Tentative: \t7\n",
+      "Rejected: \t0\n",
+      "Iteration: \t12 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t2\n",
+      "Rejected: \t2\n",
+      "Iteration: \t13 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t2\n",
+      "Rejected: \t2\n",
+      "Iteration: \t14 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t2\n",
+      "Rejected: \t2\n",
+      "Iteration: \t15 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t2\n",
+      "Rejected: \t2\n",
+      "Iteration: \t16 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t2\n",
+      "Rejected: \t2\n",
+      "Iteration: \t17 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t2\n",
+      "Rejected: \t2\n",
+      "Iteration: \t18 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t2\n",
+      "Rejected: \t2\n",
+      "Iteration: \t19 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t2\n",
+      "Rejected: \t2\n",
+      "Iteration: \t20 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t2\n",
+      "Rejected: \t2\n",
+      "Iteration: \t21 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t2\n",
+      "Rejected: \t2\n",
+      "Iteration: \t22 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t2\n",
+      "Rejected: \t2\n",
+      "Iteration: \t23 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t2\n",
+      "Rejected: \t2\n",
+      "Iteration: \t24 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t2\n",
+      "Rejected: \t2\n",
+      "Iteration: \t25 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t2\n",
+      "Rejected: \t2\n",
+      "Iteration: \t26 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t2\n",
+      "Rejected: \t2\n",
+      "Iteration: \t27 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t1\n",
+      "Rejected: \t3\n",
+      "Iteration: \t28 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t1\n",
+      "Rejected: \t3\n",
+      "Iteration: \t29 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t1\n",
+      "Rejected: \t3\n",
+      "Iteration: \t30 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t1\n",
+      "Rejected: \t3\n",
+      "Iteration: \t31 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t1\n",
+      "Rejected: \t3\n",
+      "Iteration: \t32 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t1\n",
+      "Rejected: \t3\n",
+      "Iteration: \t33 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t1\n",
+      "Rejected: \t3\n",
+      "Iteration: \t34 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t0\n",
+      "Rejected: \t4\n",
+      "\n",
+      "\n",
+      "BorutaPy finished running.\n",
+      "\n",
+      "Iteration: \t35 / 100\n",
+      "Confirmed: \t3\n",
+      "Tentative: \t0\n",
+      "Rejected: \t4\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = RandomForestClassifier(n_estimators=200, max_depth=10)\n",
+    "\n",
+    "trans = BorutaPy(clf, verbose=2, alpha=0.005, perc=50)\n",
+    "X_minmax_boruta = trans.fit_transform(X_data_minmax, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False, False, False, False])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trans.support_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Selecting the best features"
    ]
   },
   {
